# cursor-agent-clone

./: .gitignore  ARCHITECTURE.md  BLOG_OUTLINE.md  README.md  SPECS_FROM_ByteByteGoArticle.md  env.example  main.py  pyproject.toml
src/: __init__.py  context_engine.py  orchestrator.py  router.py  sandbox.py  state.py  tool_harness.py
src/logging_/: __init__.py  metrics.py  trajectory.py  visual.py
src/tools/: __init__.py  diff_utils.py  grep.py  read_file.py  search_replace.py  shell.py  write_file.py
workspace/: sample.py
